# ccool

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  run_tests.sh
cmake/: FindLibUSB.cmake  FindSystemd.cmake
docs/: conf.py  development.rst  index.rst  internals.rst  requirements.txt  usage.rst
specs/devices/: corsair_h100i_pro.yaml
specs/protocols/: asetek_pro.yaml
src/: CMakeLists.txt
src/ccool/: CMakeLists.txt  ccool.cpp
src/ccoold/: CMakeLists.txt  buffer.cpp  buffer.hpp  ccool_daemon.cpp  ccool_daemon.hpp  ccoold.cpp  daemonize.cpp  daemonize.hpp  device.hpp  device_detector.cpp  device_detector.hpp  endian.hpp  fixed_point.hpp  locked_ptr.hpp  logging.hpp  protocol.hpp  signals.hpp  types.hpp
src/ccoold/devices/: .gitignore  all.hpp
src/ccoold/interfaces/: device_interface.hpp  interface.cpp  interface.hpp
src/ccoold/interfaces/debug/: debug_device_interface.cpp  debug_device_interface.hpp  debug_interface.cpp  debug_interface.hpp
src/ccoold/interfaces/usb/: usb_device_interface.cpp  usb_device_interface.hpp  usb_interface.cpp  usb_interface.hpp
src/common/: CMakeLists.txt  arg_parser.hpp  conversion.hpp  scope_exit.hpp  string.cpp  string.hpp
tests/integration/: conftest.py  requirements.txt
tests/integration/framework/: __init__.py
tests/integration/testcases/: test_read_fan_rpm.py  test_read_firmware.py  test_read_pump_rpm.py  test_read_temperature.py  test_write_fan_curve.py  test_write_fan_pwm.py  test_write_fan_rpm.py  test_write_pump_mode.py
tests/unit/: CMakeLists.txt  test_buffer.cpp  test_conversion.cpp  test_string.cpp
tools/dpgen/: setup.py
tools/dpgen/dpgen/: __init__.py
tools/fakedev/: setup.py
tools/fakedev/fakedev/: app.py  main.py
tools/fakedev/fakedev/protocols/: __init__.py  asetek_pro.py
